--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: "3.9"
 services:
 
   server:
+    image: twitter-sharp-server
     build: .
     ports:
       - 8080:8080
-      - 9000:9000
+      - 80:80
